--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+/* Constants */
+:root {
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+
+  --navWidth: 5rem;
+  --bigNavWidth: 16rem;
+
+  --text-primary: hsla(0, 0%, 85%, 1);
+  --text-secondary: hsla(0, 0%, 90%, 0.8);
+
+  --bg-primary: hsla(0, 0%, 15%, 1);
+  --bg-secondary: hsla(0, 0%, 10%, 0.8);
+
+  --accentColor: hsla(293, 62%, 65%, 90%);
+  --transition-speed: 300ms;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,6 +26,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Fira Code', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
