created some defaults & constants

--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,60 @@
 /* Constants */
 :root {
+  /* Colors */
+  --pink: hsla(293, 62%, 65%, 90%);
+  --red1: hsl(304, 50%, 55%);
+  --red2: hsl(0, 90%, 41%);
+  --green1: hsl(79, 52%, 56%);
+  --green2: hsl(136, 41%, 53%);
+  --yellow0: hsl(15, 75%, 81%);
+  --yellow1: hsl(25, 85%, 70%);
+  --yellow2: hsl(45, 99%, 51%);
+  --blue1: hsl(210, 100%, 74%);
+  --blue2: hsl(210, 92%, 67%);
+  --blue3: hsl(210, 84%, 59%);
+
+  --grey0: hsl(0, 0%, 95%);
+  --grey1: hsl(0, 0%, 85%);
+  --grey2: hsl(0, 0%, 75%);
+  --grey3: hsl(0, 0%, 65%);
+  --grey4: hsl(0, 0%, 55%);
+  --grey5: hsl(0, 0%, 45%);
+  --grey6: hsl(0, 0%, 35%);
+  --grey7: hsl(0, 0%, 25%);
+  --grey8: hsl(0, 0%, 15%);
+  --grey9: hsl(0, 0%, 5%);
+
+  /* Defaults for light theme */
+  --text-primary: var(--grey9);
+  --text-secondary: var(--grey7);
+  --bg-primary: var(--grey0);
+  --bg-secondary: var(--gey2);
+  --accentColor: var(--blue2);
+
+  /* Defaults for dark theme */
+  /* 
+  ...
+  */
+
+  /* Fonts and colors */
+
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
+  color: var(--text-primary);
+  background: var(--bg-primary);
+
+  /* Sizing */
 
   --navWidth: 5rem;
   --bigNavWidth: 16rem;
 
-  --text-primary: hsla(0, 0%, 85%, 1);
-  --text-secondary: hsla(0, 0%, 90%, 0.8);
-
-  --bg-primary: hsla(0, 0%, 15%, 1);
-  --bg-secondary: hsla(0, 0%, 10%, 0.8);
-
-  --accentColor: hsla(293, 62%, 65%, 90%);
+  /* Default animation speed */
   --transition-speed: 300ms;
 }
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -26,6 +63,6 @@ body {
 }
 
 code {
-  font-family: 'Fira Code', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Fira Code', source-code-pro, Menlo, Monaco, Consolas,
+    'Courier New', monospace;
 }
