--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,43 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
-/*
-:root {
-  font-size: 16px;
-  font-family: "Open Sans", sans-serif;
-  --navWidth: 5rem;
-  --bigNavWidth: 16rem;
-
-  --text-primary: hsl(0, 0%, 85%, 0.8);
-  --text-secondary: hsla(0, 0%, 90%);
-
-  --bg-primary: hsla(0, 0%, 15%, 0.9);
-  --bg-secondary: hsl(0, 0%, 10%);
-
-  --accentColor: hsl(293, 62%, 65%, 90%);
-  --transition-speed: 600ms;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  background: var(--text-secondary);
-  color: var(--bg-secondary);
-}
-
-body p {
-  line-height: 1.5;
-  word-break: break-word;
-  //Justifies text 
-  text-align: justify; 
-  // Hypenation on auto 
-  hyphens: auto; 
-}
-
-h1 + p:first-letter {
-  font-size: 2em;
-  // The line-height must be adjusted to compensate for the increased font size, otherwise the leading for the overall line is disrupted. I find that any values below 0.4 work. 
-  line-height: 0; 
-}
-
 main {
   margin-left: var(--navWidth);
   padding: 1rem;
@@ -101,7 +61,7 @@ main {
   color: var(--text-secondary);
 }
 
-// Large screens
+/* Large screens */
 @media only screen and (min-width: 600px) {
   .navbar {
     top: 0;
@@ -118,7 +78,7 @@ main {
   }
 }
 
-// Small screens
+/* Small screens */
 @media only screen and (max-width: 600px) {
   .navbar {
     bottom: 0;
@@ -133,9 +93,4 @@ main {
   .nav-link {
     justify-content: center;
   }
-
-  main {
-    margin: 0;
-  }
 }
-*/
