--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,15 @@
-footer {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
+/* Small screens */
+@media only screen and (max-width: 600px) {
+  footer {
+    display: none;
+  }
+}
+
+/* Large screens */
+@media only screen and (min-width: 600px) {
+  footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
 }
