--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -1,7 +1,19 @@
 section {
   height: 100vh;
+  display: flex;
 }
 
 h2 {
-  text-align: center;
+  margin: 0 auto;
+}
+
+/* Small screens */
+@media only screen and (max-width: 600px) {
+}
+
+/* Large screens */
+@media only screen and (min-width: 600px) {
+  section {
+    scroll-snap-align: start;
+  }
 }
