replaced Section component with more acurate ones

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,3 +1,9 @@
+section {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 /* Small screens */
 @media only screen and (max-width: 600px) {
 }
@@ -6,5 +12,9 @@
 @media only screen and (min-width: 600px) {
   main {
     scroll-snap-type: y mandatory;
+  }
+
+  section {
+    scroll-snap-align: start;
   }
 }
