--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
   --text-primary: var(--grey9);
   --text-secondary: var(--grey7);
   --bg-primary: var(--grey0);
-  --bg-secondary: var(--gey2);
+  --bg-secondary: var(--grey2);
   --accent-color: var(--blue2);
 
   /* Defaults for dark theme */
