--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -20,10 +20,6 @@
   width: 100%;
 }
 
-.nav-item:last-child {
-  margin-top: auto;
-}
-
 .nav-link {
   display: flex;
   align-items: center;
@@ -44,6 +40,7 @@
   min-width: 2rem;
   width: 2rem;
   margin: 0 1.5rem;
+  /* fill: hsla(0, 0%, 0%, 0.8); */
 }
 
 .icon {
@@ -75,6 +72,10 @@
 
   .navbar:hover .link-text {
     display: inline;
+  }
+
+  .nav-item:last-child {
+    margin-top: auto;
   }
 }
 
