--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -4,6 +4,10 @@ section {
   flex-direction: column;
 }
 
+h2 {
+  text-align: center;
+}
+
 /* Small screens */
 @media only screen and (max-width: 600px) {
 }
