--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -13,6 +13,7 @@
   margin: 1em auto;
   padding: 1em 2em;
   box-shadow: 3px 3px 30px var(--box-shadow);
+  border-radius: 0.5em;
   display: flex;
   flex-direction: column;
   background-color: var(--bg-secondary);
