--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -29,6 +29,7 @@
 #contact-form input,
 textarea {
   border: 1px solid var(--grey4);
+  border-radius: 0.5em;
   padding: 0.5em 1em;
 }
 /* Styling the inputs */
