played around with bax-shadows and text color for the form

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -12,8 +12,9 @@
 #contact-form {
   margin: 1em auto;
   padding: 1em 2em;
-  box-shadow: 3px 3px 30px var(--box-shadow);
-  border-radius: 0.5em;
+  box-shadow: calc(var(--font-size) / 2) calc(var(--font-size) / 2)
+    var(--font-size) var(--box-shadow);
+  border-radius: var(--border-radius);
   display: flex;
   flex-direction: column;
   background-color: var(--bg-secondary);
@@ -23,13 +24,14 @@
   display: flex;
   align-items: center;
   margin: 1em 0 0.5em;
+  color: var(--text-primary);
 }
 
 /* Styling the inputs */
 #contact-form input,
 textarea {
   border: 1px solid var(--grey4);
-  border-radius: 0.5em;
+  border-radius: var(--border-radius);
   padding: 0.5em 1em;
 }
 /* Styling the inputs */
@@ -52,5 +54,5 @@ select:focus {
   background: var(--accent-color);
   color: var(--bg-primary);
   border: 1px solid var(--bg-secondary);
-  border-radius: 0.5em;
+  border-radius: var(--border-radius);
 }
