--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
-    margin: 1em 0;
+    padding: 1em 0;
+    background-color: var(--bg-secondary);
   }
 }
