--- a/src/components/Skill.css
+++ b/src/components/Skill.css
@@ -1,9 +1,14 @@
 :root {
-  --skill-height: 0.5em;
+  --skill-height: 1em;
 }
 
 .language {
+  display: flex;
+  flex-direction: column;
   margin: 0;
+  /* padding: 0; */
+  justify-content: center;
+  align-items: center;
 }
 
 .skill {
@@ -11,6 +16,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin: 1em;
+  transition: width var(--transition-speed) ease;
 }
 
 .gauge {
