--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -33,10 +33,15 @@ textarea {
   border: 1px solid var(--grey4);
   border-radius: var(--border-radius);
   padding: 0.5em 1em;
+  width: 30ch;
 }
 /* Styling the inputs */
 #contact-form textarea {
   min-height: 4em;
+  min-width: 50ch;
+  max-width: 80ch;
+  max-height: 10em;
+  overflow-y: scroll;
 }
 
 /* Styling the inputs on focus */
@@ -48,7 +53,7 @@ select:focus {
 }
 
 #contact-form #send {
-  margin: 1em 0;
+  margin: 1em auto;
   padding: 0.5em 0;
   font-size: var(--font-size);
   background: var(--accent-color);
