--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,5 @@
 .navbar {
   position: fixed;
-  /* background-color: var(--grey7); */
   transition: width calc(var(--transition-speed) * 2) ease;
   overflow: scroll;
 }
@@ -41,18 +40,12 @@
 .nav-link:hover {
   filter: grayscale(0%) opacity(1);
   background: var(--bg-primary);
-  color: var(--text-primary);
 }
 
-.nav-link svg {
+.nav-link .icon {
   min-width: 2rem;
   width: 2rem;
   margin: 0 1.5rem;
-  /* fill: hsla(0, 0%, 0%, 0.8); */
-}
-
-.icon {
-  /* fill: var(--accent-color); */
   fill: var(--text-primary);
   transition: var(--transition-speed);
 }
