--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,3 +1,8 @@
+footer {
+  color: var(--text-primary);
+  background-color: var(--bg-secondary);
+}
+
 /* Small screens */
 @media only screen and (max-width: 600px) {
   footer {
@@ -12,6 +17,5 @@
     justify-content: space-evenly;
     align-items: flex-start;
     padding: 1em 0;
-    background-color: var(--bg-secondary);
   }
 }
