Much nicer looking form :)

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,12 +1,12 @@
-#contact {
-  display: flex;
-  flex-direction: column;
-}
-
 .list-social {
   list-style: none;
   display: flex;
   flex-direction: row;
+}
+
+#contact {
+  display: flex;
+  flex-direction: column;
 }
 
 #contact-form {
@@ -20,48 +20,80 @@
   background-color: var(--bg-secondary);
 }
 
-.contact-form-label {
+.input-group {
   display: flex;
+  justify-content: space-between;
+}
+
+.contact-form-label {
+  /* display: flex; */
   align-items: center;
-  margin: 1em 0 0.5em;
+
   color: var(--text-primary);
 }
 
-/* Styling the inputs */
+/* Input reset */
+
 #contact-form input,
-textarea {
-  border: 1px solid var(--grey4);
+#contact-form textarea {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
+/* Styling the inputs */
+#contact-form input:not([type='button']),
+#contact-form textarea {
+  border: 1px solid transparent;
+  border-bottom: 2px solid transparent;
   border-radius: var(--border-radius);
   padding: 0.5em 1em;
-  width: 30ch;
   background-color: var(--bg-primary);
   color: var(--text-primary);
+  width: 100%;
 }
 /* Styling the inputs */
 #contact-form textarea {
-  min-height: 4em;
-  min-width: 50ch;
-  max-width: 80ch;
-  max-height: 10em;
   overflow-y: scroll;
+  height: 5rem;
 }
 
 /* Styling the inputs on focus */
 #contact-form input:focus,
-textarea:focus,
-select:focus {
+#contact-form textarea:focus {
   outline: none;
+  /* Need outline bottom */
   border-bottom: 2px solid var(--accent-color);
 }
 
-#contact-form #send {
-  margin: 1em auto;
-  padding: 0.5em 0;
-  font-size: var(--font-size);
+#contact-form #submit {
+  margin: 0.5em auto;
   background: var(--accent-color);
-  color: var(--bg-primary);
+  color: var(--text-primary);
   border: 1px solid var(--bg-secondary);
   border-radius: var(--border-radius);
+
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  line-height: 1.5;
+  cursor: pointer;
+  white-space: nowrap;
+  box-sizing: border-box;
+  transition: all 0.15s ease;
+}
+
+#contact-form #submit:focus,
+#contact-form #submit:hover,
+#contact-form #submit:active {
+  background-color: var(--accent-color-active);
+}
+
+#contact-form #submit:disabled {
+  background-color: var(--grey3);
 }
 
 /* Small screens */
@@ -69,12 +101,32 @@ select:focus {
   #contact-form {
     width: 100%;
   }
+
+  .input-group {
+    flex-direction: column;
+  }
+
+  .contact-form-label {
+    margin: 1em 0 0.5em;
+  }
+
+  #contact-form input,
+  #contact-form textarea {
+    width: 100%;
+  }
 }
 
 /* Large screens */
 @media only screen and (min-width: 600px) {
   #contact-form {
-    min-width: 65%;
-    max-width: 80ch;
+  }
+  .input-group {
+    flex-direction: row;
+    margin: 0.5em 0;
+  }
+
+  .contact-form-label {
+    margin: auto 2em auto 0;
+    min-width: 10ch;
   }
 }
