--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,8 @@
   --mysql: rgb(98, 173, 198);
   --nodeJS: rgb(153, 197, 93);
   --react: rgb(129, 216, 247);
+  --mongodb: rgb(118, 171, 95);
+  --postgresql: rgb(50, 104, 144);
 
   /* Defaults for light theme */
   --text-primary: var(--grey9);
@@ -77,16 +79,12 @@ button {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 
   /* Fonts and colors */
-
   font-size: var(--font-size);
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', 'Segoe UI', 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: var(--text-primary);
   background: var(--bg-primary);
 }
