--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,41 +1,63 @@
-/* main #portfolio {
-  height: auto;
-} */
-
-.site-container {
-  display: grid;
-  gap: 1em;
-  padding: 1em;
+.slider {
+  overflow: hidden;
   height: 100%;
-  overflow-y: auto;
+  width: 100%;
 }
 
-.site-preview {
+.slider > a {
+  display: inline-flex;
+  background: var(--bg-secondary);
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--border-radius);
+  margin: 0 0.5rem 0.5rem 0;
+  padding: 0.5rem;
+  /* position: relative; */
+}
+.slider > a:active {
+  top: 1px;
+}
+.slider > a:focus {
+  background: #222;
+}
+
+.project-container {
+  display: flex;
+  gap: 1rem;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+
+  height: 100%;
+}
+
+.project {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: coral;
-  min-height: 100px;
+
+  scroll-snap-align: start;
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+
+  /* transform-origin: center center;
+  transform: scale(1);
+  transition: transform 0.5s;
+  position: relative; */
+}
+
+.project > iframe {
+  width: 100%;
+  height: 100%;
 }
 
 /* Small screens */
 @media only screen and (max-width: 600px) {
-  .site-container {
-    grid-template-columns: 1fr;
-  }
-
-  .site-preview {
-    /* aspect-ratio: 1/2; */
-  }
 }
 
 /* Large screens */
 @media only screen and (min-width: 600px) {
-  .site-container {
-    grid-template-columns: repeat(3, minmax(150px, 1fr));
-    /* overflow: auto; */
-  }
-  .site-preview {
-    /* aspect-ratio: 2/1; */
-  }
 }
